Prevented horizontal scrolling caused by extremely long words. Content without spaces that is too long is now simply hidden and no longer visible except if you drag you web browser window wider.

--- a/node/static/style.css
+++ b/node/static/style.css
@@ -17,7 +17,8 @@ chat-box {
 
 #msgs {
   flex: 1;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding: 1em;
 }
 
